[package]
name = "cursorvec"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["vec","cursor"]
categories = ["data-structures"]
description = "Cursored vector container"
homepage = "https://github.com/simhyeon/cursorvec"
repository = "https://github.com/simhyeon/cursorvec"
readme = "README.md"
